Bugfix in the sticky editor where typing too long sentences would cause the contents to overflow the editor. Clicking an existing sticky will no longer immediteately open the editor, but will instead redirect to a viewer, from which the editor can be opened. Stickies without title/contents get an appropriate message to notifiy the user of this

--- a/stickynote/static/styles.css
+++ b/stickynote/static/styles.css
@@ -182,14 +182,29 @@ nav div li {
 /*=====================================================================================*/
 /*Sticky grid: */
 
-.stickyNotesGrid {
-	display: grid;
-	grid-template-columns: 200px 200px 200px 200px; /*Having rows that do not fit initially (before updated in JS) looks better than only having a single row*/
-	grid-template-rows: 200px;
-	margin-left: 4px;
-	margin-right: 4px;
-	grid-auto-rows: 200px;
-	/*justify-content: space-evenly;*//*This doesn't work on most browsers, so it's done dynamically in js instead by changing the padding and grid-gap*/
+@media (min-width: 450px) {
+    .stickyNotesGrid {
+        display: grid;
+        grid-template-columns: 200px 200px 200px 200px; /*Having rows that do not fit initially (before updated in JS) looks better than only having a single row*/
+        grid-template-rows: 200px;
+        margin-left: 4px;
+        margin-right: 4px;
+        grid-auto-rows: 200px;
+        /*justify-content: space-evenly;*//*This doesn't work on most browsers, so it's done dynamically in js instead by changing the padding and grid-gap*/
+    }
+}
+
+@media (max-width: 450px) {
+    .stickyNotesGrid {
+        display: grid;
+				/*grid-template-columns has been hardcoded in the JS! Changing it here won't do anything*/
+        grid-template-columns: 150px 150px 150px 150px; /*Having rows that do not fit initially (before updated in JS) looks better than only having a single row*/
+        grid-template-rows: 150px;
+        margin-left: 4px;
+        margin-right: 4px;
+        grid-auto-rows: 150px;
+        /justify-content: space-evenly; /*This doesn't work on most browsers, so it's done dynamically in js instead by changing the padding and grid-gap*/
+    }
 }
 
 .sticky_div {
@@ -286,9 +301,12 @@ nav div li {
 		padding: 10px;
 		margin-left: -15px; /*bootstrap changes the size of the body with its margins, so we add the same ones here*/
 		margin-right: -15px;
-	}
+		min-height: 60px;
+		}
+		.popup div .header > h1 {
+			font-weight: bold;
+		}
 	.popup div .body {
-		/*min-height: 500px;*/
 		height: auto;
 		padding: 10px 0px;
 		text-align: center;
@@ -319,7 +337,7 @@ nav div li {
 				width: 100%;
 				margin: 0px;
 				word-wrap: break-word;
-				} /*fffffffffffffffff*/
+				}
 				.popup div .body #id_sticky_options .sticky_option_element div label,
 				.popup div .body #id_sticky_options .sticky_option_element div input,
 				.popup div .body #id_sticky_options .sticky_option_element div h3,
@@ -339,6 +357,8 @@ nav div li {
 			display: inline-block;
 			vertical-align: top;
 			text-align: initial;
+			max-width: 100%;
+			width: 100%;
 		}
 		.popup div .body #id_sticky_form h2 {
 			color: #EFEFEF;
@@ -353,12 +373,15 @@ nav div li {
 			width: 75%;
 			margin: 2px auto 4px auto;
 		}
-		.popup div .body #id_sticky_form .buttons {
+		.popup div .body .buttons {
 			margin: 15px auto 8px auto;
 			text-align: right;
+			vertical-align: bottom;
 		}
 		.popup div .body #id_sticky_form div .popup_submit_button,
-		.popup div .body #id_sticky_form div .popup_cancel_button	{
+		.popup div .body #id_sticky_form div .popup_cancel_button,
+		.popup div .body .buttons .popup_submit_button,
+		.popup div .body .buttons .popup_cancel_button	{
 			background-color: #666667;
 			height: 2.5em;
 			display: inline-block;
@@ -366,6 +389,7 @@ nav div li {
 			text-align: center;
 			width: 25%;
 			border-color: transparent;
+			font-size: 16px;
 		}
 	.popup .sticky_edit {
 		width: 100%;
@@ -373,6 +397,19 @@ nav div li {
 	.popup .sticky_autoshare {
 		color: #a94442;;
 	}
+
+/*Viewer*/
+#id_popup_view_sticky .body {
+	text-align: left;
+	font-size: 18px;
+}
+#id_popup_view_sticky .body > div #id_popup_view_sticky_contents {
+	min-height: 300px;
+}
+
+
+
+
 
 /*=====================================================================================*/
 /*Quill editor:*/
